--- a/css/estiloActividadAtraso.css
+++ b/css/estiloActividadAtraso.css
@@ -1,12 +1,3 @@
-.margenAbajo{
-    border-bottom: #535353 3px solid !important;
-}
-
-.negro{
-    color: white;
-    background-color: #10110c;
-}
-
 #tablaAtraso td span{
     display: block;
     width: 100%;
@@ -17,11 +8,39 @@ table{
     width: 100%;
 }
 
-.num{
+tbody tr td{
     text-align: right;
 }
-.prc{
-    margin-top: 4px;
-    text-align: center;
-    border-top: 2px solid rgba(220, 220, 220, 0.3);
+
+tbody tr td:first-of-type{
+    text-align: left;
+}
+
+.tablaAtrasoInactividad tr:nth-of-type(n + 5):nth-of-type(-n + 12) td:nth-of-type(n+6):nth-of-type(-n + 12),
+.tablaAtrasoInactividad tr:nth-of-type(1) td:nth-of-type(n +5):nth-of-type(-n+12){
+    background-color: #e64545;
+    color: white;
+}
+
+.tablaAtrasoInactividad tr:nth-of-type(n + 3):nth-of-type(-n + 4) td:nth-of-type(n + 2):nth-of-type(-n+12),
+.tablaAtrasoInactividad tr:nth-of-type(n + 5):nth-of-type(-n + 12) td:nth-of-type(n + 2):nth-of-type(-n+7),
+.tablaAtrasoInactividad tr:nth-of-type(1) td:nth-of-type(4){
+    color: black;
+    background-color: #f8f879;
+}
+
+.tablaAtrasoInactividad tr:nth-of-type(2) td:nth-of-type(n + 2):nth-of-type(-n+12),
+.tablaAtrasoInactividad tr:nth-of-type(1) td:nth-of-type(n + 2):nth-of-type(-n+3){
+   color: white;
+    background-color: #55c555;
+}
+
+.tablaAtrasoInactividad tr:nth-of-type(12) td:nth-of-type(12){
+    background-color: #10110c !important;
+}
+
+.tablaAtrasoInactividad tr:last-of-type,
+.tablaAtrasoInactividad tr td:last-of-type{
+    background-color: #e2e2f1 !important;
+    font-weight: bold;
 }
