--- a/css/estiloPlantilla.css
+++ b/css/estiloPlantilla.css
@@ -27,10 +27,6 @@
     margin-bottom: 24px !important;
 }
 
-#carteraoperativa *{
-    float: left;
-}
-
 .tablitas tr td{
     background-color: white;
     font-weight: normal;
@@ -48,15 +44,23 @@ tr td:first-of-type{
     border-bottom: #535353 3px solid !important;
 }
 
-td:nth-of-type(7), 
-td:nth-of-type(8), 
-td:nth-of-type(14), 
-td:nth-of-type(15){
-    font-size: 12px;
+@media only screen and (max-width: 1500px) {
+    td:nth-of-type(7), 
+    td:nth-of-type(8), 
+    td:nth-of-type(14), 
+    td:nth-of-type(15){
+        font-size: 12px;
+    }
 }
+
+
 
 canvas{
     height: 150px;
     width: 100%;
     float: left;
+}
+
+.pct{
+    text-align: center;
 }
