--- a/css/estiloActividadAtraso.css
+++ b/css/estiloActividadAtraso.css
@@ -1,13 +1,3 @@
-#tablaAtraso td span{
-    display: block;
-    width: 100%;
-    float: left;
-}
-
-table{
-    width: 100%;
-}
-
 tbody tr td{
     text-align: right;
 }
@@ -48,15 +38,7 @@ tbody tr td:first-of-type{
 .tablaAtrasoInactividad tr td:last-of-type{
     background-color: #e2e2f1 !important;
     font-weight: bold;
-}
-
-.tablaAtrasoInactividad tr td:last-of-type{
     font-size: 14;
-}
-
-.numeros, .porcentajes{
-    max-width: 1800px;
-    margin:auto;
 }
 
 .resumen{
@@ -66,4 +48,12 @@ tbody tr td:first-of-type{
 
 #tablaResumen tr td:first-of-type{
     text-align: center;
+}
+
+.tablaAtraso tr th{
+    width: 7.4%;
+}
+
+.tablaAtraso tr th:first-of-type{
+    width: 11%;
 }
